# data-science-examples

./: README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
1-intro-to-programming/: programming.ipynb
10-computer_vision/: computer_vision.ipynb
11-time_series/: time_series.ipynb
14-geospatial_analysis/: geospatial_analysis.ipynb
15-machine_learning_explainability/: machine_learning_explainability.ipynb
3-pandas/: pandas.ipynb
4-intermediate-machine_learning/: intermediate_machine_learning.ipynb
5-data_visualization/: data_visualization.ipynb
6-feature_engineering/: feature_engineering.ipynb
7-intro-to-sql/: sql_intro.ipynb
8-advanced-sql/: sql_advanced.ipynb
9-intro-to-deep_learning/: deep_learning.ipynb
advanced-sql/: sql_advanced.ipynb
data_cleaning/: data_cleaning.ipynb
data_visualization/: data_visualization.ipynb
feature_engineering/: feature_engineering.ipynb
geospatial_analysis/: geospatial_analysis.ipynb
intermediate-machine_learning/: intermediate_machine_learning.ipynb
intro-to-ai_ethics/: ai_ethics.ipynb
intro-to-deep_learning/: deep_learning.ipynb
intro-to-machine_learning/: machine_learning.ipynb
machine_learning_explainability/: machine_learning_explainability.ipynb
pandas/: pandas.ipynb
